# DesignPatterns

./: .gitignore  CMakeLists.txt  README.md
Laboration_1/include/: Lab1.h  Shouter.h  SoundProducer.h  Talker.h  Uppgift1.h  Whisperer.h
Laboration_1/src/: Lab1.cpp  Shouter.cpp  SoundProducer.cpp  Uppgift1.cpp  Whisperer.cpp
Laboration_2/include/: Bakery.h  BakingRecepy.h  BakingRecepyManager.h  Kladdkaka.h  Lab2.h  NoBakingException.h  Pizza.h  Scones.h  Sockerkaka.h
Laboration_2/src/: Bakery.cpp  BakingRecepy.cpp  BakingRecepyManager.cpp  Kladdkaka.cpp  Lab2.cpp  Pizza.cpp  Scones.cpp  Sockerkaka.cpp
Laboration_3/include/: Airplane.h  Lab3.h  SpaceShuttle.h  Submarine.h  Vehicle.h  VehicleAdapters.h
Laboration_3/src/: Airplane.cpp  SpaceShuttle.cpp  Submarine.cpp  Vehicle.cpp  VehicleAdapters.cpp  lab3.cpp
Laboration_4/include/: Action.h  Game.h  GameFactory.h  Lab4.h  Obstacle.h  Player.h
Laboration_4/src/: Client.cpp  Game.cpp  GameFactory.cpp  Player.cpp  lab4.cpp
Laboration_5/include/: Client.h  Command.h  CommandManager.h  Lab5.h  Menu.h  MoveCommand.h  Replayer.h  ResetCommand.h  ShowCommand.h
Laboration_5/src/: Client.cpp  CommandManager.cpp  Menu.cpp  MoveCommand.cpp  Replayer.cpp  ResetCommand.cpp  ShowCommand.cpp  lab5.cpp
Laboration_6/include/: Client.h  Component.h  ConcreteComponent.h  ConcreteDecorators.h  Lab6.h  Menu.h
Laboration_6/src/: Client.cpp  Menu.cpp  lab6.cpp
Laboration_7/include/: Lab7.h
Laboration_7/src/: lab7.cpp
Laboration_8/Assignment_1/include/: Action.h  Client.h  GameFactory.h  Obstacle.h  Player.h
Laboration_8/Assignment_1/src/: Action.cpp  Client.cpp  Game.cpp  GameFactory.cpp  Obstacle.cpp  lab8.cpp
Laboration_8/Assignment_2/include/: Client.h  ConcreteComponent.h  ConcreteDecorators.h  Lab8.h  Menu.h  Prototype.h  PrototypeManager.h
Laboration_8/Assignment_2/src/: Client.cpp  Menu.cpp  PrototypeManager.cpp  lab8-assignment2.cpp
Laboration_8/src/: lab8.cpp
_CodeBase/Bakery/: Ingredient.hpp
_CodeBase/Hanoi/include/: HanoiEngine.h
_CodeBase/Hanoi/src/: HanoiEngine.cpp
_CodeBase/PowerSource/include/: FuelCell.h  GasTurbine.h  PowerSource.h  PowerSourceAdapters.h  V8Classic.h
_CodeBase/PowerSource/src/: FuelCell.cpp  GasTurbine.cpp  PowerSourceAdapters.cpp  V8Classic.cpp
